--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev -p 3002 --turbopack",
+		"dev": "next dev -p 3002",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
@@ -46,6 +46,8 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
+		"crypto": "^1.0.1",
+		"crypto-ts": "^1.0.1",
 		"date-fns": "^3.6.0",
 		"embla-carousel-react": "^8.5.2",
 		"input-otp": "^1.4.2",
