--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@radix-ui/react-tooltip": "^1.1.8",
 		"@tabler/icons-react": "^3.31.0",
 		"@tanstack/react-table": "^8.21.2",
+		"bcrypt": "^5.1.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -51,6 +52,7 @@
 		"date-fns": "^3.6.0",
 		"embla-carousel-react": "^8.5.2",
 		"input-otp": "^1.4.2",
+		"jose": "^6.0.10",
 		"lucide-react": "^0.484.0",
 		"next": "15.2.4",
 		"next-themes": "^0.4.6",
